--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -15,10 +15,34 @@
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
+apply plugin: 'org.team11260.fast-load-plugin'
+
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url = 'https://www.matthewo.tech/maven/'
+        }
+
+    }
+
+    dependencies {
+        classpath 'org.team11260:fast-load-plugin:0.1.2'
+    }
+
+}
+
+
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
+    androidResources {
+        noCompress 'tflite'
+    }
 
     packagingOptions {
+        jniLibs {
+            pickFirsts += ['**/*.so']
+        }
         jniLibs.useLegacyPackaging true
     }
 }
@@ -27,14 +51,31 @@ repositories {
     maven {
         url = 'https://maven.brott.dev/'
     }
+
+    maven {
+        url = 'https://www.matthewo.tech/maven/'
+    }
+
+    maven {
+        url = 'https://jitpack.io'
+    }
+
 }
 
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
+    implementation 'org.ftclib.ftclib:vision:2.1.0' // vision
+    implementation 'org.ftclib.ftclib:core:2.1.1' // core
+
+
     implementation "com.acmerobotics.roadrunner:ftc:0.1.13"
     implementation "com.acmerobotics.roadrunner:core:1.0.0-beta8"
     implementation "com.acmerobotics.roadrunner:actions:1.0.0-beta8"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.14"
+
+    implementation 'org.team11260:fast-load:0.1.2'
+
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.1-ALPHA'
 }
