--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -70,10 +70,11 @@ dependencies {
     implementation 'org.ftclib.ftclib:core:2.1.1' // core
 
 
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.14"
     implementation "com.acmerobotics.roadrunner:core:1.0.0"
     implementation "com.acmerobotics.roadrunner:actions:1.0.0"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
 
     implementation 'org.team11260:fast-load:0.1.2'
 
