small demo bot changes
motors now break when power is set to zero -- makes it way easier to drive

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -41,7 +41,7 @@ android {
 
     packagingOptions {
         jniLibs {
-            pickFirsts += ['**/*.so']
+            pickFirsts += ['**/*.so', '**/*.so']
         }
         jniLibs.useLegacyPackaging true
     }
