--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -63,6 +63,18 @@ repositories {
 }
 
 dependencies {
+
+    constraints {
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is not a part of kotlin-stdlib")
+        }
+
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0")  {
+            because("kotlin-stdlib-jdk8 is not a part of kotlin-stdlib")
+        }
+    }
+
+
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
