--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,15 @@ allprojects {
         mavenCentral()
         google()
     }
+
+    // Force consistent Kotlin library versions
+    configurations.all {
+        resolutionStrategy {
+            force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
+            force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22'
+            force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22'
+        }
+    }
 }
 
 repositories {
