--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -6,6 +6,9 @@ repositories {
 
     maven { url 'https://jitpack.io' }
 
+//    maven { url = 'https://maven.brott.dev/' }
+    maven { url= 'https://maven.pedropathing.com/' }
+
 }
 
 dependencies {
@@ -22,5 +25,8 @@ dependencies {
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 
     implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.8'
+
+    implementation 'com.pedropathing:pedro:1.0.8'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 }
 
