--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -59,6 +59,7 @@ repositories {
     maven {
         url = 'https://jitpack.io'
     }
+    maven { url = "https://maven.easyopencv.dev" }
 
 }
 
@@ -83,7 +84,7 @@ dependencies {
 
 
     implementation "com.acmerobotics.roadrunner:core:1.0.0"
-    implementation "com.acmerobotics.roadrunner:actions:1.0.0"
+    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
@@ -95,5 +96,8 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+    implementation 'org.openftc:easyopencv:1.7.3'
 
 }
+
+
