--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,8 +14,7 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
-
-apply plugin: 'org.team11260.fast-load-plugin'
+apply plugin: 'dev.frozenmilk.sinister.sloth.load'
 
 buildscript {
     repositories {
@@ -24,10 +23,16 @@ buildscript {
             url = 'https://www.matthewo.tech/maven/'
         }
 
+        maven {
+            url "https://repo.dairy.foundation/releases"
+        }
+
+
     }
 
     dependencies {
-        classpath 'org.team11260:fast-load-plugin:0.1.2'
+        classpath "dev.frozenmilk:Load:0.2.1"
+
     }
 
 }
@@ -61,6 +66,10 @@ repositories {
     }
     maven { url = "https://maven.easyopencv.dev" }
 
+    maven {
+        url = "https://repo.dairy.foundation/releases"
+    }
+
 }
 
 dependencies {
@@ -83,21 +92,26 @@ dependencies {
     implementation 'org.ftclib.ftclib:core:2.1.1' // core
 
 
-    implementation "com.acmerobotics.roadrunner:core:1.0.0"
-    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
 
-    implementation 'org.team11260:fast-load:0.1.2'
-
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.1-ALPHA'
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.15"
+    implementation("com.acmerobotics.roadrunner:ftc:0.1.15") {
+        exclude group: "com.acmerobotics.dashboard"
+    }
     implementation "com.acmerobotics.roadrunner:core:1.0.1"
-    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+    implementation("com.acmerobotics.roadrunner:actions:1.0.1"){
+        exclude group: "com.acmerobotics.dashboard"
+    }
     implementation 'org.openftc:easyopencv:1.7.3'
 
+    implementation("dev.frozenmilk.sinister:Sloth:0.2.1")
+
+    implementation("com.acmerobotics.slothboard:dashboard:0.2.1+0.4.16")
+
 }
+
+
+
 
 
