--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -22,11 +22,12 @@ dependencies {
     implementation 'org.firstinspires.ftc:Vision:10.1.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
 
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 
     implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.8'
 
-    implementation 'com.pedropathing:pedro:1.0.9'
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+    implementation ('com.pedropathing:pedro:1.0.9') {
+        exclude group: "com.acmerobotics.dashboard"
+    }
+
 }
 
